--- a/app/src/main/res/layout/activity_add_edit_category.xml
+++ b/app/src/main/res/layout/activity_add_edit_category.xml
@@ -12,28 +12,72 @@
         android:id="@+id/imageViewPreview"
         android:layout_width="match_parent"
         android:layout_height="150dp"/>
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="533dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="533dp"
             android:padding="@dimen/activity_horizontal_margin">
+
             <EditText
+                android:id="@+id/editTextCategoryName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/nombre_add_edit_categoria"
-                android:inputType="textPersonName"/>
-            
+                android:inputType="textPersonName" />
+
+
             <EditText
-                android:layout_width=""
-                android:layout_height=""
+                android:id="@+id/editTextCategoryLink"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/editTextCategoryName"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="25dp"
+                android:hint="@string/link_add_edit_categoria"
+                android:inputType="textWebEditText" />
+
+            <Button
+                android:id="@+id/buttonPreview"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignTop="@id/editTextCategoryLink"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="6dp"
+                android:background="@android:drawable/ic_menu_view"
+                android:gravity="right" />
+
+            <EditText
+                android:id="@+id/editTextCategoryDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editTextCategoryLink"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="25dp"
+                android:hint="@string/description_add_edit_category"
+                android:inputType="textMultiLine"
+                android:maxLength="100"
+                android:maxLines="2" />
 
 
         </RelativeLayout>
-        
-        
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/FABSaveCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            android:src="@android:drawable/ic_menu_save"
+            app:backgroundTint="@color/colorAccent"
+            app:borderWidth="0dp" />
+
     </FrameLayout>
         
 </LinearLayout>
