--- a/app/src/main/res/layout/card_view_category.xml
+++ b/app/src/main/res/layout/card_view_category.xml
@@ -42,8 +42,27 @@
             android:maxLength="100"
             android:textColor="@color/colorPrimaryText" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorDivider"/>
+        <RelativeLayout            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
+            <Button
+                android:id="@+id/buttonDeleteCategoria"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_alignParentRight="true"
+                android:background="@android:color/transparent"
+                android:text="@string/deleteCategoria"
+                android:textColor="@color/colorAccent" />
+
+        </RelativeLayout>
     </LinearLayout>
+
 
 
 
