--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
         <!-- Base application theme. -->
-        <style name="Theme.Proyecto_DAS" parent="Theme.AppCompat.Light.DarkActionBar" tools:targetApi="lollipop">
+        <style name="Theme.Proyecto_DAS" parent="Theme.AppCompat.Light.DarkActionBar">
             <!-- Primary brand color. -->
             <item name="colorPrimary">@color/colorPrimary</item>
             <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
             <item name="colorAccent">@color/colorAccent</item>
 
-<!--            <item name="windowActionBar">false</item>-->
-<!--            <item name="windowNoTitle">true</item>-->
+            <item name="windowActionBar">false</item>
+            <item name="windowNoTitle">true</item>
 
-            <item name="android:windowContentTransitions">true</item>
-            <item name="android:windowTranslucentStatus">true</item>
-            <item name="android:windowTranslucentNavigation">true</item>
+<!--            <item name="android:windowContentTransitions">true</item>-->
+<!--            <item name="android:windowTranslucentStatus">true</item>-->
+<!--            <item name="android:windowTranslucentNavigation">true</item>-->
 
 
             <!-- Status bar color. -->
