--- a/app/src/main/res/layout/card_view_esqui.xml
+++ b/app/src/main/res/layout/card_view_esqui.xml
@@ -1,6 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/activity_horizontal_margin"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    card_view:cardCornerRadius="4dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <ImageView
+            android:id="@+id/imageViewEsqui"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            />
+        <TextView
+            android:id="@+id/textViewEsquiMarca"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-24dp"
+            android:paddingLeft="10dp"
+            android:shadowColor="#000"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="5"
+            android:textColor="@color/colorIcons"
+            android:textStyle="bold"
+            android:text="SALOMON"/>
+        <TextView
+            android:id="@+id/textViewEsquiNombreModelo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:maxLines="3"
+            android:textSize="15dp"
+            android:fontFamily="@font/open_sans_bold"
+            android:textColor="@color/colorPrimaryText"
+            android:text="SALOMON S/RACE"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/editTextPrecioEsqui"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/open_sans_bold"
+                android:gravity="left"
+                android:inputType="number"
+                android:padding="10dp"
+                android:text="20"
+                android:textColor="@color/orangePrimary" />
+
+            <TextView
+                android:id="@+id/editTextSimboloEuro"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_toEndOf="@+id/editTextPrecioEsqui"
+                android:fontFamily="@font/open_sans_bold"
+                android:inputType="number"
+                android:padding="10dp"
+                android:text="€"
+                android:textColor="@color/orangePrimary" />
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorDivider"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+
+            <Button
+                android:id="@+id/buttonEditCategoria"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:background="@android:color/transparent"
+                android:text="@string/editarCategoria"
+                android:textColor="@color/colorAccent" />
+
+            <Button
+                android:id="@+id/buttonDeleteCategoria"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_alignParentRight="true"
+                android:background="@android:color/transparent"
+                android:text="@string/deleteCategoria"
+                android:textColor="@color/colorAccent" />
+
+        </RelativeLayout>
+    </LinearLayout>
+
+
+
+
+</androidx.cardview.widget.CardView>
