--- a/app/src/main/res/layout/activity_add_edit_category.xml
+++ b/app/src/main/res/layout/activity_add_edit_category.xml
@@ -22,8 +22,11 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="533dp">
-
+        android:layout_height="match_parent">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="533dp"
@@ -86,6 +89,7 @@
 
 
         </RelativeLayout>
+        </ScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/FABSaveCategory"
@@ -99,4 +103,6 @@
             app:borderWidth="0dp" />
 
     </FrameLayout>
+
+
 </LinearLayout>
