Implementando los metodo para editar/add un nuevo modelo de Esqui

--- a/app/src/main/res/layout/activity_add_edit_esqui.xml
+++ b/app/src/main/res/layout/activity_add_edit_esqui.xml
@@ -25,11 +25,10 @@
         android:layout_height="match_parent">
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="533dp"
+                android:layout_height="match_parent"
                 android:padding="@dimen/activity_horizontal_margin">
 
                 <EditText
@@ -95,6 +94,15 @@
                     android:gravity="center"
                     android:text="@string/btnGaleria"
                     android:elevation="20dp"/>
+
+                <RatingBar
+                    android:id="@+id/ratingBarEsqui"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/editTextEsquiDescription"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="85dp" />
 
 
             </RelativeLayout>
