--- a/app/src/main/res/layout/activity_add_edit_category.xml
+++ b/app/src/main/res/layout/activity_add_edit_category.xml
@@ -29,7 +29,7 @@
             >
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="533dp"
+            android:layout_height="match_parent"
             android:padding="@dimen/activity_horizontal_margin">
 
             <EditText
