Implementando los metodo para editar/add un nuevo modelo de Esqui comprobando los permisos

--- a/app/src/main/res/layout/activity_add_edit_esqui.xml
+++ b/app/src/main/res/layout/activity_add_edit_esqui.xml
@@ -28,7 +28,7 @@
             android:layout_height="match_parent">
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:padding="@dimen/activity_horizontal_margin">
 
                 <EditText
@@ -83,6 +83,7 @@
                     android:maxLength="100"
                     android:maxLines="2" />
 
+
                 <Button
                     android:id="@+id/btnGaleriaEsqui"
                     android:layout_width="wrap_content"
@@ -94,6 +95,16 @@
                     android:gravity="center"
                     android:text="@string/btnGaleria"
                     android:elevation="20dp"/>
+                <EditText
+                    android:id="@+id/editTextEsquiPrecio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/editTextEsquiDescription"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="20dp"
+                    android:hint="@string/add_edit_esqui_precio"
+                    android:inputType="number"
+                    />
 
                 <RatingBar
                     android:id="@+id/ratingBarEsqui"
