Implementando los metodo para editar/add un nuevo  y actualizar datos

--- a/app/src/main/res/layout/activity_esqui.xml
+++ b/app/src/main/res/layout/activity_esqui.xml
@@ -12,7 +12,7 @@
         android:scrollbars="vertical" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/FABAddCity"
+        android:id="@+id/FABAddEsqui"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
